fixed contact spacing

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -593,15 +593,13 @@ textarea {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	overflow: hidden;
 	overflow-y: hidden;
 	overflow-x: hidden;
 	& h1 {
-		margin-top: 2rem;
+		margin: 2rem 0;
 		font-weight: 300;
 		font-size: 2.5rem;
 		letter-spacing: 15px;
-		margin-bottom: 2rem;
 		text-transform: uppercase;
 	}
 	& p {
@@ -616,12 +614,11 @@ textarea {
 		position: absolute;
 		top: 0;
 		left: 0;
-		height: 130vh;
+		height: 100%;
 		width: 100vw;
 		background-size: cover;
 		background-position: center;
 		background-attachment: fixed;
-		overflow-y: hidden;
 		overflow-x: hidden;
 	}
 
@@ -649,8 +646,6 @@ form {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	// width: 600px;
-	// height: 550px;
 	margin: 2rem auto;
 	padding: 6rem 6rem;
 	background-color: rgba(255, 255, 255, 0.808);
@@ -671,7 +666,7 @@ form {
 		width: 100%;
 		justify-content: flex-start;
 		& input {
-			width: 186px;
+			width: 11.625rem;
 			padding: 0.5rem 1rem;
 		}
 		& .name-input {
